2003-06-09  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-modify-dtd): added some error checking for
	the has-seen-elements.

2003-03-28  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-do-processing-instruction): new handling
	of <?PSGML> processing instruction.
	(sgml--pi-psgml-handler): new func
	(sgml--pi-element-handler): new func. handles <?PSGML ELEMENT ..>
	(sgml-psgml-pi-enable-outside-dtd): new variable. controls when
	<?PSGML> is evaluated.

2003-03-27  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el: fix wrong file name in error trace

2003-03-25  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-dtd.el (sgml-parse-parameter-literal):
	Modified to use unibyte-char-to-multibyte if
	enable-multibyte-characters. I hope this is correct.

2003-03-25  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-dtd.el (sgml-parse-parameter-literal): 
	Modified to use unibyte-char-to-multibyte if
	enable-multibyte-characters. I hope this is correct.

2003-02-12  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-setup-doctype): add Predefined Entities
	for XML.

2003-01-24  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-do-move): undo wrong optimization, fix
	problem with non working exclusions.

2002-12-13  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.3.1 released

2002-09-19  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-parse-prolog): Check if sgml-dtd-info is
	nil before trying to use it.

2002-08-13  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-edit.el (sgml-edit-attrib-abort): new command
	(sgml-edit-attrib-mode-map): abort on key C-c C-k
	(sgml-attribute-buffer): include abort key in header line and use
	substitute-command-keys.
	(sgml-edit-attributes): move setting mode to
	sgml-attribute-buffer.

	* psgml-parse.el (sgml-open-element): add optional net-enabled
	parameter.
	(sgml-do-start-tag): use new parameter on sgml-open-element.