@@ -1,3 +1,10 @@
+2005-02-09  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml-ids.el: New file (From: Jean-Daniel.Fekete)
+	* psgml-edit.el: ID/IDREF patch (From: Jean-Daniel.Fekete)
+	* psgml-maint.el: ID/IDREF patch (From: Jean-Daniel.Fekete)
+	* psgml-parse.el: ID/IDREF patch (From: Jean-Daniel.Fekete)
+	
 2003-06-09  Lennart Staflin  <lenst@lysator.liu.se>
 
 	* psgml-parse.el (sgml-modify-dtd): added some error checking for
